--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,43 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.macleod2486.androidswissknife.MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Toggle Torch"
-        android:id="@+id/toggleLight"
-        android:enabled="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <android.support.v4.widget.DrawerLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/drawer">
 
-    <Button
-        android:text="Toggle Wifi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toggleLight"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp"
-        android:id="@+id/toggleWifi"
-        android:layout_alignRight="@+id/toggleLight"
-        android:layout_alignEnd="@+id/toggleLight" />
+        <!--Container for the fragments-->
+        <FrameLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/container"/>
 
-    <Button
-        android:text="Toggle GPS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toggleWifi"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="12dp"
-        android:id="@+id/toggleGps"
-        android:layout_alignRight="@+id/toggleWifi"
-        android:layout_alignEnd="@+id/toggleWifi" />
+        <!-- Listview that will contain the various options -->
+        <ListView
+            android:layout_height="match_parent"
+            android:layout_width="240dp"
+            android:layout_gravity="left"
+            android:background="#FFFFFF"
+            android:id="@+id/optionList"/>
+
+    </android.support.v4.widget.DrawerLayout>
+
 </RelativeLayout>
