--- a/app/src/main/res/layout/nfc.xml
+++ b/app/src/main/res/layout/nfc.xml
@@ -34,7 +34,7 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/nfcText">
+            android:id="@+id/nfcTextStatus">
         </TextView>
     </ScrollView>
 
