Removed unnecessary read button functionality

--- a/app/src/main/res/layout/nfc.xml
+++ b/app/src/main/res/layout/nfc.xml
@@ -3,27 +3,12 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <Button
-        android:text="Read NFC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:id="@+id/readNFC"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
         android:text="Write NFC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/writeNFC"
-        android:layout_marginRight="33dp"
-        android:layout_marginEnd="33dp"
-        android:layout_alignBaseline="@+id/readNFC"
-        android:layout_alignBottom="@+id/readNFC"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
 
 </RelativeLayout>
