Set to use scrolling textview instead of launching text

--- a/app/src/main/res/layout/nfc.xml
+++ b/app/src/main/res/layout/nfc.xml
@@ -11,4 +11,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/textEntry"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/writeNFC" />
+
 </RelativeLayout>
