--- a/app/src/main/res/layout/nfc.xml
+++ b/app/src/main/res/layout/nfc.xml
@@ -23,4 +23,15 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/writeNFC" />
 
+    <Button
+        android:text="Clear Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/clearText"
+        android:layout_above="@+id/textEntry"
+        android:layout_toLeftOf="@+id/writeNFC"
+        android:layout_toStartOf="@+id/writeNFC"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp" />
+
 </RelativeLayout>
