--- a/app/src/main/res/xml/nfc_tech_filter.xml
+++ b/app/src/main/res/xml/nfc_tech_filter.xml
@@ -2,4 +2,12 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <tech-list><tech>android.nfc.tech.Ndef</tech></tech-list>
     <tech-list><tech>android.nfc.tech.NdefFormatable</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.IsoDep</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.NfcA</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.NfcB</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.NfcBarcode</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.BasicTagTechnology</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.MifareClassic</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.MifareUltralight</tech></tech-list>
+    <tech-list><tech>android.nfc.tech.NfcV</tech></tech-list>
 </resources>
